# AI-400

./: .gitignore
class-1-project/: CLARIFICATION_COMPLETION_REPORT.md  CONFIG_DEPRECATION_FIX_SUMMARY.md  FINAL_CLARIFICATION_REPORT.md  SERVICEBASE_INTEGRATION_SUMMARY.md
class-1-project/.claude/: settings.local.json
class-1-project/.claude/skills/async-sqlmodel/: SKILL.md  VALIDATION_REPORT.md
class-1-project/.claude/skills/fastapi-builder/: SKILL.md
class-1-project/.claude/skills/pytest-testing/: SKILL.md
class-1-project/.specify/memory/: constitution.md
class-1-project/history/prompts/001-todo-api-auth/: 001-todo-api-specification.spec.prompt.md  002-todo-api-specification-clarifications.clarify.prompt.md  003-todo-api-additional-ambiguity-clarifications.clarify.prompt.md  004-todo-api-technical-implementation-plan.plan.prompt.md  (+4 more)
class-1-project/specs/001-todo-api-auth/: plan.md  spec.md  tasks.md
class-1-project/todo-api/: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  VERIFICATION.txt  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini
class-1-project/todo-api/src/todo_api/: __init__.py  config.py  database.py  dependencies.py  error_handler.py  exceptions.py  logging_config.py  main.py  middleware.py  security.py
class-1-project/todo-api/src/todo_api/models/: __init__.py  base.py  todo.py  token.py  user.py
class-1-project/todo-api/src/todo_api/routes/: __init__.py  auth.py  todo.py
class-1-project/todo-api/src/todo_api/schemas/: __init__.py  auth.py  pagination.py  todo.py
class-1-project/todo-api/src/todo_api/services/: __init__.py  auth_service.py  todo_service.py  token_service.py  user_service.py
class-1-project/todo-api/tests/: conftest.py  test_api_routes.py  test_auth.py  test_auth_endpoints.py  test_todos_service.py
(+46 files in other folders)
