[project]
name = "todo-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Moosa Afzal", email = "moosaafzal2002@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
todo-api = "todo_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
