[project]
name = "todo-api"
version = "0.1.0"
description = "Production-grade Todo API with JWT authentication using FastAPI, SQLModel, and Neon Postgres"
readme = "README.md"
authors = [
    { name = "Moosa Afzal", email = "moosaafzal2002@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlmodel>=0.0.14",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose>=3.3.0",
    "pwdlib>=0.2.0",
    "argon2-cffi>=23.1.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "isort>=5.13.0",
    "httpx>=0.25.0",
    "aiosqlite>=0.19.0",
]

[project.scripts]
todo-api = "todo_api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
